examples/grpc_dynamic_routing/envoy_config.json
{
  "admin": {},
  "layeredRuntime": {
    "layers": [
      {
        "name": "static-runtime",
        "staticLayer": {
          "envoy.reloadable_features.explicit_internal_address_config": false,
          "envoy.reloadable_features.filter_access_loggers_first": false,
          "envoy.reloadable_features.http2_use_oghttp2": false,
          "http.max_requests_per_io_cycle": 1,
          "re2.max_program_size.error_level": 1000
        }
      }
    ]
  },
  "node": {
    "cluster": "ESPv2_cluster",
    "id": "ESPv2"
  },
  "staticResources": {
    "clusters": [
      {
        "connectTimeout": "20s",
        "dnsLookupFamily": "V4_PREFERRED",
        "loadAssignment": {
          "clusterName": "127.0.0.1",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "127.0.0.1",
                        "portValue": 8082
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "backend-cluster-examples-grpc-dynamic-routing-wd6ufmzfya-uc.a.run.app_local",
        "type": "LOGICAL_DNS",
        "typedExtensionProtocolOptions": {
          "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
            "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
            "explicitHttpConfig": {
              "http2ProtocolOptions": {
                "connectionKeepalive": {
                  "interval": "30s",
                  "timeout": "10s"
                },
                "initialConnectionWindowSize": 268435456,
                "initialStreamWindowSize": 268435456,
                "maxConcurrentStreams": 2147483647
              }
            }
          }
        }
      },
      {
        "connectTimeout": "20s",
        "loadAssignment": {
          "clusterName": "169.254.169.254",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "169.254.169.254",
                        "portValue": 80
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "metadata-cluster",
        "type": "STRICT_DNS"
      },
      {
        "connectTimeout": "5s",
        "dnsLookupFamily": "V4_ONLY",
        "loadAssignment": {
          "clusterName": "servicecontrol.googleapis.com",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "servicecontrol.googleapis.com",
                        "portValue": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "service-control-cluster",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "validationContext": {
                "trustedCa": {
                  "filename": "/etc/ssl/certs/ca-certificates.crt"
                }
              }
            },
            "sni": "servicecontrol.googleapis.com"
          }
        },
        "type": "LOGICAL_DNS"
      },
      {
        "connectTimeout": "20s",
        "dnsLookupFamily": "V4_PREFERRED",
        "loadAssignment": {
          "clusterName": "grpc-echo-oxouww7xzq-uc.a.run.app",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "grpc-echo-oxouww7xzq-uc.a.run.app",
                        "portValue": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "alpnProtocols": [
                "h2"
              ],
              "validationContext": {
                "trustedCa": {
                  "filename": "/etc/ssl/certs/ca-certificates.crt"
                }
              }
            },
            "sni": "grpc-echo-oxouww7xzq-uc.a.run.app"
          }
        },
        "type": "LOGICAL_DNS",
        "typedExtensionProtocolOptions": {
          "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
            "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
            "explicitHttpConfig": {
              "http2ProtocolOptions": {
                "connectionKeepalive": {
                  "interval": "30s",
                  "timeout": "10s"
                },
                "initialConnectionWindowSize": 268435456,
                "initialStreamWindowSize": 268435456,
                "maxConcurrentStreams": 2147483647
              }
            }
          }
        }
      },
      {
        "connectTimeout": "20s",
        "dnsLookupFamily": "V4_ONLY",
        "loadAssignment": {
          "clusterName": "www.googleapis.com",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "www.googleapis.com",
                        "portValue": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "jwt-provider-cluster-www.googleapis.com:443",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "validationContext": {
                "trustedCa": {
                  "filename": "/etc/ssl/certs/ca-certificates.crt"
                }
              }
            },
            "sni": "www.googleapis.com"
          }
        },
        "type": "LOGICAL_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socketAddress": {
            "address": "0.0.0.0",
            "portValue": 8080
          }
        },
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "commonHttpProtocolOptions": {
                    "headersWithUnderscoresAction": "REJECT_REQUEST"
                  },
                  "http2ProtocolOptions": {
                    "initialConnectionWindowSize": 268435456,
                    "initialStreamWindowSize": 268435456,
                    "maxConcurrentStreams": 2147483647
                  },
                  "httpFilters": [
                    {
                      "name": "com.google.espv2.filters.http.header_sanitizer",
                      "typedConfig": {
                        "@type": "type.googleapis.com/espv2.api.envoy.v12.http.header_sanitizer.FilterConfig"
                      }
                    },
                    {
                      "name": "envoy.filters.http.compressor",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor",
                        "compressorLibrary": {
                          "name": "envoy.compression.gzip.compressor",
                          "typedConfig": {
                            "@type": "type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip"
                          }
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.compressor",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor",
                        "compressorLibrary": {
                          "name": "envoy.compression.brotli.compressor",
                          "typedConfig": {
                            "@type": "type.googleapis.com/envoy.extensions.compression.brotli.compressor.v3.Brotli"
                          }
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.jwt_authn",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication",
                        "providers": {
                          "test_jwk": {
                            "audiences": [
                              "https://examples-grpc-dynamic-routing-wd6ufmzfya-uc.a.run.app"
                            ],
                            "forward": true,
                            "forwardPayloadHeader": "X-Endpoint-API-UserInfo",
                            "fromHeaders": [
                              {
                                "name": "Authorization",
                                "valuePrefix": "Bearer "
                              },
                              {
                                "name": "X-Goog-Iap-Jwt-Assertion"
                              }
                            ],
                            "fromParams": [
                              "access_token"
                            ],
                            "issuer": "e2e-client-jwk@cloudesf-testing.iam.gserviceaccount.com",
                            "jwtCacheConfig": {
                              "jwtCacheSize": 1000
                            },
                            "payloadInMetadata": "jwt_payloads",
                            "remoteJwks": {
                              "asyncFetch": {},
                              "cacheDuration": "300s",
                              "httpUri": {
                                "cluster": "jwt-provider-cluster-www.googleapis.com:443",
                                "timeout": "30s",
                                "uri": "https://www.googleapis.com/service_accounts/v1/jwk/e2e-client-jwk@cloudesf-testing.iam.gserviceaccount.com"
                              }
                            }
                          }
                        },
                        "requirementMap": {
                          "test.grpc.Test.EchoStream": {
                            "providerName": "test_jwk"
                          }
                        }
                      }
                    },
                    {
                      "name": "com.google.espv2.filters.http.service_control",
                      "typedConfig": {
                        "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.FilterConfig",
                        "depErrorBehavior": "BLOCK_INIT_ON_ANY_ERROR",
                        "generatedHeaderPrefix": "X-Endpoint-",
                        "imdsToken": {
                          "cluster": "metadata-cluster",
                          "timeout": "30s",
                          "uri": "http://169.254.169.254/computeMetadata/v1/instance/service-accounts/default/token"
                        },
                        "requirements": [
                          {
                            "apiKey": {
                              "allowWithoutApiKey": true
                            },
                            "apiName": "test.grpc.Test",
                            "apiVersion": "v1",
                            "operationName": "test.grpc.Test.Echo",
                            "serviceName": "examples-grpc-dynamic-routing-wd6ufmzfya-uc.a.run.app"
                          },
                          {
                            "apiName": "test.grpc.Test",
                            "apiVersion": "v1",
                            "operationName": "test.grpc.Test.EchoStream",
                            "serviceName": "examples-grpc-dynamic-routing-wd6ufmzfya-uc.a.run.app"
                          },
                          {
                            "apiName": "test.grpc.Test",
                            "apiVersion": "v1",
                            "operationName": "test.grpc.Test.Cork",
                            "serviceName": "examples-grpc-dynamic-routing-wd6ufmzfya-uc.a.run.app"
                          },
                          {
                            "apiName": "test.grpc.Test",
                            "apiVersion": "v1",
                            "operationName": "test.grpc.Test.EchoReport",
                            "serviceName": "examples-grpc-dynamic-routing-wd6ufmzfya-uc.a.run.app"
                          }
                        ],
                        "scCallingConfig": {
                          "networkFailOpen": true
                        },
                        "serviceControlUri": {
                          "cluster": "service-control-cluster",
                          "timeout": "30s",
                          "uri": "https://servicecontrol.googleapis.com:443/v1/services"
                        },
                        "services": [
                          {
                            "backendProtocol": "grpc",
                            "jwtPayloadMetadataName": "jwt_payloads",
                            "producerProjectId": "cloudesf-testing",
                            "serviceConfig": {
                              "logging": {
                                "producerDestinations": [
                                  {
                                    "logs": [
                                      "endpoints_log"
                                    ],
                                    "monitoredResource": "api"
                                  }
                                ]
                              },
                              "logs": [
                                {
                                  "name": "endpoints_log"
                                }
                              ],
                              "metrics": [
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    },
                                    {
                                      "key": "/protocol"
                                    },
                                    {
                                      "key": "/response_code"
                                    },
                                    {
                                      "key": "/response_code_class"
                                    },
                                    {
                                      "key": "/status_code"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/request_count",
                                  "type": "serviceruntime.googleapis.com/api/consumer/request_count",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    },
                                    {
                                      "key": "/error_type"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/error_count",
                                  "type": "serviceruntime.googleapis.com/api/consumer/error_count",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/total_latencies",
                                  "type": "serviceruntime.googleapis.com/api/consumer/total_latencies",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/protocol"
                                    },
                                    {
                                      "key": "/response_code"
                                    },
                                    {
                                      "key": "/response_code_class"
                                    },
                                    {
                                      "key": "/status_code"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/request_count",
                                  "type": "serviceruntime.googleapis.com/api/producer/request_count",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/error_type"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/error_count",
                                  "type": "serviceruntime.googleapis.com/api/producer/error_count",
                                  "valueType": "INT64"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/total_latencies",
                                  "type": "serviceruntime.googleapis.com/api/producer/total_latencies",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    },
                                    {
                                      "key": "/end_user"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/top_request_count_by_end_user",
                                  "type": "serviceruntime.googleapis.com/api/consumer/top_request_count_by_end_user",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    },
                                    {
                                      "key": "/end_user_country"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/top_request_count_by_end_user_country",
                                  "type": "serviceruntime.googleapis.com/api/consumer/top_request_count_by_end_user_country",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    },
                                    {
                                      "key": "/referer"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/top_request_count_by_referer",
                                  "type": "serviceruntime.googleapis.com/api/consumer/top_request_count_by_referer",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/protocol"
                                    },
                                    {
                                      "key": "/response_code"
                                    },
                                    {
                                      "key": "/consumer_id"
                                    },
                                    {
                                      "key": "/status_code"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/top_request_count_by_consumer",
                                  "type": "serviceruntime.googleapis.com/api/producer/top_request_count_by_consumer",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    },
                                    {
                                      "key": "/quota_group_name"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/quota_used_count",
                                  "type": "serviceruntime.googleapis.com/api/consumer/quota_used_count",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/request_overhead_latencies",
                                  "type": "serviceruntime.googleapis.com/api/consumer/request_overhead_latencies",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/backend_latencies",
                                  "type": "serviceruntime.googleapis.com/api/consumer/backend_latencies",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/request_sizes",
                                  "type": "serviceruntime.googleapis.com/api/consumer/request_sizes",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/response_sizes",
                                  "type": "serviceruntime.googleapis.com/api/consumer/response_sizes",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/request_overhead_latencies",
                                  "type": "serviceruntime.googleapis.com/api/producer/request_overhead_latencies",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/backend_latencies",
                                  "type": "serviceruntime.googleapis.com/api/producer/backend_latencies",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/request_sizes",
                                  "type": "serviceruntime.googleapis.com/api/producer/request_sizes",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/response_sizes",
                                  "type": "serviceruntime.googleapis.com/api/producer/response_sizes",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/consumer_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/top_request_sizes_by_consumer",
                                  "type": "serviceruntime.googleapis.com/api/producer/top_request_sizes_by_consumer",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/consumer_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/top_response_sizes_by_consumer",
                                  "type": "serviceruntime.googleapis.com/api/producer/top_response_sizes_by_consumer",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    },
                                    {
                                      "key": "/protocol"
                                    },
                                    {
                                      "key": "/response_code"
                                    },
                                    {
                                      "key": "/response_code_class"
                                    },
                                    {
                                      "key": "/status_code"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/by_consumer/request_count",
                                  "type": "serviceruntime.googleapis.com/api/producer/by_consumer/request_count",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    },
                                    {
                                      "key": "/error_type"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/by_consumer/error_count",
                                  "type": "serviceruntime.googleapis.com/api/producer/by_consumer/error_count",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/by_consumer/total_latencies",
                                  "type": "serviceruntime.googleapis.com/api/producer/by_consumer/total_latencies",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    },
                                    {
                                      "key": "/quota_group_name"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/by_consumer/quota_used_count",
                                  "type": "serviceruntime.googleapis.com/api/producer/by_consumer/quota_used_count",
                                  "valueType": "INT64"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/by_consumer/request_overhead_latencies",
                                  "type": "serviceruntime.googleapis.com/api/producer/by_consumer/request_overhead_latencies",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/by_consumer/backend_latencies",
                                  "type": "serviceruntime.googleapis.com/api/producer/by_consumer/backend_latencies",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/by_consumer/request_sizes",
                                  "type": "serviceruntime.googleapis.com/api/producer/by_consumer/request_sizes",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "labels": [
                                    {
                                      "key": "/credential_id"
                                    }
                                  ],
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/by_consumer/response_sizes",
                                  "type": "serviceruntime.googleapis.com/api/producer/by_consumer/response_sizes",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/streaming_request_message_counts",
                                  "type": "serviceruntime.googleapis.com/api/producer/streaming_request_message_counts",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/streaming_response_message_counts",
                                  "type": "serviceruntime.googleapis.com/api/producer/streaming_response_message_counts",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/streaming_request_message_counts",
                                  "type": "serviceruntime.googleapis.com/api/consumer/streaming_request_message_counts",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/streaming_response_message_counts",
                                  "type": "serviceruntime.googleapis.com/api/consumer/streaming_response_message_counts",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/streaming_durations",
                                  "type": "serviceruntime.googleapis.com/api/producer/streaming_durations",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/streaming_durations",
                                  "type": "serviceruntime.googleapis.com/api/consumer/streaming_durations",
                                  "valueType": "DISTRIBUTION"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/request_bytes",
                                  "type": "serviceruntime.googleapis.com/api/producer/request_bytes",
                                  "valueType": "INT64"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/producer/response_bytes",
                                  "type": "serviceruntime.googleapis.com/api/producer/response_bytes",
                                  "valueType": "INT64"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/request_bytes",
                                  "type": "serviceruntime.googleapis.com/api/consumer/request_bytes",
                                  "valueType": "INT64"
                                },
                                {
                                  "metricKind": "DELTA",
                                  "name": "serviceruntime.googleapis.com/api/consumer/response_bytes",
                                  "type": "serviceruntime.googleapis.com/api/consumer/response_bytes",
                                  "valueType": "INT64"
                                }
                              ],
                              "monitoredResources": [
                                {
                                  "labels": [
                                    {
                                      "key": "cloud.googleapis.com/location"
                                    },
                                    {
                                      "key": "cloud.googleapis.com/uid"
                                    },
                                    {
                                      "key": "serviceruntime.googleapis.com/api_version"
                                    },
                                    {
                                      "key": "serviceruntime.googleapis.com/api_method"
                                    },
                                    {
                                      "key": "serviceruntime.googleapis.com/consumer_project"
                                    },
                                    {
                                      "key": "cloud.googleapis.com/project"
                                    },
                                    {
                                      "key": "cloud.googleapis.com/service"
                                    }
                                  ],
                                  "type": "api"
                                }
                              ],
                              "monitoring": {
                                "consumerDestinations": [
                                  {
                                    "metrics": [
                                      "serviceruntime.googleapis.com/api/consumer/request_count",
                                      "serviceruntime.googleapis.com/api/consumer/error_count",
                                      "serviceruntime.googleapis.com/api/consumer/quota_used_count",
                                      "serviceruntime.googleapis.com/api/consumer/total_latencies",
                                      "serviceruntime.googleapis.com/api/consumer/request_overhead_latencies",
                                      "serviceruntime.googleapis.com/api/consumer/backend_latencies",
                                      "serviceruntime.googleapis.com/api/consumer/request_sizes",
                                      "serviceruntime.googleapis.com/api/consumer/response_sizes",
                                      "serviceruntime.googleapis.com/api/consumer/top_request_count_by_end_user",
                                      "serviceruntime.googleapis.com/api/consumer/top_request_count_by_end_user_country",
                                      "serviceruntime.googleapis.com/api/consumer/top_request_count_by_referer",
                                      "serviceruntime.googleapis.com/api/consumer/streaming_request_message_counts",
                                      "serviceruntime.googleapis.com/api/consumer/streaming_response_message_counts",
                                      "serviceruntime.googleapis.com/api/consumer/streaming_durations",
                                      "serviceruntime.googleapis.com/api/consumer/request_bytes",
                                      "serviceruntime.googleapis.com/api/consumer/response_bytes"
                                    ],
                                    "monitoredResource": "api"
                                  }
                                ],
                                "producerDestinations": [
                                  {
                                    "metrics": [
                                      "serviceruntime.googleapis.com/api/producer/request_count",
                                      "serviceruntime.googleapis.com/api/producer/error_count",
                                      "serviceruntime.googleapis.com/api/producer/total_latencies",
                                      "serviceruntime.googleapis.com/api/producer/request_overhead_latencies",
                                      "serviceruntime.googleapis.com/api/producer/backend_latencies",
                                      "serviceruntime.googleapis.com/api/producer/request_sizes",
                                      "serviceruntime.googleapis.com/api/producer/response_sizes",
                                      "serviceruntime.googleapis.com/api/producer/top_request_count_by_consumer",
                                      "serviceruntime.googleapis.com/api/producer/top_request_sizes_by_consumer",
                                      "serviceruntime.googleapis.com/api/producer/top_response_sizes_by_consumer",
                                      "serviceruntime.googleapis.com/api/producer/streaming_request_message_counts",
                                      "serviceruntime.googleapis.com/api/producer/streaming_response_message_counts",
                                      "serviceruntime.googleapis.com/api/producer/streaming_durations",
                                      "serviceruntime.googleapis.com/api/producer/request_bytes",
                                      "serviceruntime.googleapis.com/api/producer/response_bytes",
                                      "serviceruntime.googleapis.com/api/producer/by_consumer/request_count",
                                      "serviceruntime.googleapis.com/api/producer/by_consumer/error_count",
                                      "serviceruntime.googleapis.com/api/producer/by_consumer/total_latencies",
                                      "serviceruntime.googleapis.com/api/producer/by_consumer/quota_used_count",
                                      "serviceruntime.googleapis.com/api/producer/by_consumer/request_overhead_latencies",
                                      "serviceruntime.googleapis.com/api/producer/by_consumer/backend_latencies",
                                      "serviceruntime.googleapis.com/api/producer/by_consumer/request_sizes",
                                      "serviceruntime.googleapis.com/api/producer/by_consumer/response_sizes"
                                    ],
                                    "monitoredResource": "api"
                                  }
                                ]
                              }
                            },
                            "serviceConfigId": "2020-07-13r0",
                            "serviceName": "examples-grpc-dynamic-routing-wd6ufmzfya-uc.a.run.app",
                            "tracingDisabled": true
                          }
                        ]
                      }
                    },
                    {
                      "name": "envoy.filters.http.grpc_web",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"
                      }
                    },
                    {
                      "name": "envoy.filters.http.grpc_json_transcoder",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder",
                        "autoMapping": true,
                        "convertGrpcStatus": true,
                        "ignoredQueryParameters": [
                          "access_token",
                          "api_key",
                          "key"
                        ],
                        "printOptions": {},
                        "protoDescriptorBin": "CqwFChVnb29nbGUvYXBpL2h0dHAucHJvdG8SCmdvb2dsZS5hcGkieQoESHR0cBIqCgVydWxlcxgBIAMoCzIULmdvb2dsZS5hcGkuSHR0cFJ1bGVSBXJ1bGVzEkUKH2Z1bGx5X2RlY29kZV9yZXNlcnZlZF9leHBhbnNpb24YAiABKAhSHGZ1bGx5RGVjb2RlUmVzZXJ2ZWRFeHBhbnNpb24i2gIKCEh0dHBSdWxlEhoKCHNlbGVjdG9yGAEgASgJUghzZWxlY3RvchISCgNnZXQYAiABKAlIAFIDZ2V0EhIKA3B1dBgDIAEoCUgAUgNwdXQSFAoEcG9zdBgEIAEoCUgAUgRwb3N0EhgKBmRlbGV0ZRgFIAEoCUgAUgZkZWxldGUSFgoFcGF0Y2gYBiABKAlIAFIFcGF0Y2gSNwoGY3VzdG9tGAggASgLMh0uZ29vZ2xlL [...]
                        "queryParamUnescapePlus": true,
                        "services": [
                          "test.grpc.Test"
                        ]
                      }
                    },
                    {
                      "name": "com.google.espv2.filters.http.backend_auth",
                      "typedConfig": {
                        "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.FilterConfig",
                        "depErrorBehavior": "BLOCK_INIT_ON_ANY_ERROR",
                        "imdsToken": {
                          "cluster": "metadata-cluster",
                          "timeout": "30s",
                          "uri": "http://169.254.169.254/computeMetadata/v1/instance/service-accounts/default/identity"
                        },
                        "jwtAudienceList": [
                          "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                        ]
                      }
                    },
                    {
                      "name": "com.google.espv2.filters.http.grpc_metadata_scrubber",
                      "typedConfig": {
                        "@type": "type.googleapis.com/espv2.api.envoy.v12.http.grpc_metadata_scrubber.FilterConfig"
                      }
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                        "suppressEnvoyHeaders": true
                      }
                    }
                  ],
                  "httpProtocolOptions": {
                    "enableTrailers": true
                  },
                  "localReplyConfig": {
                    "bodyFormat": {
                      "jsonFormat": {
                        "code": "%RESPONSE_CODE%",
                        "message": "%LOCAL_REPLY_BODY%"
                      }
                    }
                  },
                  "mergeSlashes": true,
                  "normalizePath": true,
                  "pathWithEscapedSlashesAction": "KEEP_UNCHANGED",
                  "routeConfig": {
                    "name": "local_route",
                    "virtualHosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "backend",
                        "routes": [
                          {
                            "decorator": {
                              "operation": "ingress Echo"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/echo"
                            },
                            "name": "test.grpc.Test.Echo",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "401s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "400s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.Echo"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress Echo"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/echo/"
                            },
                            "name": "test.grpc.Test.Echo",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "401s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "400s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.Echo"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress EchoReport"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/echoreport"
                            },
                            "name": "test.grpc.Test.EchoReport",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "401s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "400s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.EchoReport"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress EchoReport"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/echoreport/"
                            },
                            "name": "test.grpc.Test.EchoReport",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "401s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "400s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.EchoReport"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress EchoStream"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/echostream"
                            },
                            "name": "test.grpc.Test.EchoStream",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "400s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "0s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.EchoStream"
                              },
                              "envoy.filters.http.jwt_authn": {
                                "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig",
                                "requirementName": "test.grpc.Test.EchoStream"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress EchoStream"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/echostream/"
                            },
                            "name": "test.grpc.Test.EchoStream",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "400s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "0s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.EchoStream"
                              },
                              "envoy.filters.http.jwt_authn": {
                                "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig",
                                "requirementName": "test.grpc.Test.EchoStream"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress Cork"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/test.grpc.Test/Cork"
                            },
                            "name": "test.grpc.Test.Cork",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "400s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "0s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.Cork"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress Cork"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/test.grpc.Test/Cork/"
                            },
                            "name": "test.grpc.Test.Cork",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "400s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "0s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.Cork"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress Echo"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/test.grpc.Test/Echo"
                            },
                            "name": "test.grpc.Test.Echo",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "401s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "400s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.Echo"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress Echo"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/test.grpc.Test/Echo/"
                            },
                            "name": "test.grpc.Test.Echo",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "401s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "400s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.Echo"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress EchoReport"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/test.grpc.Test/EchoReport"
                            },
                            "name": "test.grpc.Test.EchoReport",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "401s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "400s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.EchoReport"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress EchoReport"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/test.grpc.Test/EchoReport/"
                            },
                            "name": "test.grpc.Test.EchoReport",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "401s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "400s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.EchoReport"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress EchoStream"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/test.grpc.Test/EchoStream"
                            },
                            "name": "test.grpc.Test.EchoStream",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "400s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "0s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.EchoStream"
                              },
                              "envoy.filters.http.jwt_authn": {
                                "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig",
                                "requirementName": "test.grpc.Test.EchoStream"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress EchoStream"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/test.grpc.Test/EchoStream/"
                            },
                            "name": "test.grpc.Test.EchoStream",
                            "route": {
                              "cluster": "backend-cluster-grpc-echo-oxouww7xzq-uc.a.run.app:443",
                              "hostRewriteLiteral": "grpc-echo-oxouww7xzq-uc.a.run.app",
                              "idleTimeout": "400s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "0s"
                            },
                            "typedPerFilterConfig": {
                              "com.google.espv2.filters.http.backend_auth": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.backend_auth.PerRouteFilterConfig",
                                "jwtAudience": "https://grpc-echo-oxouww7xzq-uc.a.run.app"
                              },
                              "com.google.espv2.filters.http.service_control": {
                                "@type": "type.googleapis.com/espv2.api.envoy.v12.http.service_control.PerRouteFilterConfig",
                                "operationName": "test.grpc.Test.EchoStream"
                              },
                              "envoy.filters.http.jwt_authn": {
                                "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig",
                                "requirementName": "test.grpc.Test.EchoStream"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/echo"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/echo\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/echo"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/echo"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/echo\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/echo/"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/echoreport"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/echoreport\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/echoreport"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/echoreport"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/echoreport\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/echoreport/"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/echostream"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/echostream\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/echostream"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/echostream"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/echostream\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/echostream/"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/test.grpc.Test/Cork"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/test.grpc.Test/Cork\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/test.grpc.Test/Cork"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/test.grpc.Test/Cork"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/test.grpc.Test/Cork\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/test.grpc.Test/Cork/"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/test.grpc.Test/Echo"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/test.grpc.Test/Echo\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/test.grpc.Test/Echo"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/test.grpc.Test/Echo"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/test.grpc.Test/Echo\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/test.grpc.Test/Echo/"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/test.grpc.Test/EchoReport"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/test.grpc.Test/EchoReport\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/test.grpc.Test/EchoReport"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/test.grpc.Test/EchoReport"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/test.grpc.Test/EchoReport\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/test.grpc.Test/EchoReport/"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/test.grpc.Test/EchoStream"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/test.grpc.Test/EchoStream\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/test.grpc.Test/EchoStream"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/test.grpc.Test/EchoStream"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/test.grpc.Test/EchoStream\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/test.grpc.Test/EchoStream/"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownOperationName"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is not defined by this API."
                              },
                              "status": 404
                            },
                            "match": {
                              "prefix": "/"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "statPrefix": "ingress_http",
                  "upgradeConfigs": [
                    {
                      "upgradeType": "websocket"
                    }
                  ],
                  "useRemoteAddress": false,
                  "xffNumTrustedHops": 2
                }
              }
            ]
          }
        ],
        "name": "ingress_listener"
      }
    ]
  }
}
